move render logic to CommandHandler